# packastack

./: .coverage  .gitignore  CLAUDE.md  LICENSE  README.md  REFACTOR_PLAN.md  pyproject.toml
.github/: copilot-instructions.md
docs/: conf.py  index.rst
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/.doctrees/appendices/: failure-signatures.doctree  glossary.doctree  index.doctree  preflight-checklist.doctree
docs/_build/html/.doctrees/explanation/: architecture.doctree  building-packages.doctree  dependency-resolution.doctree  design-tradeoffs.doctree  index.doctree  reproducibility.doctree  testing-philosophy.doctree  walkthrough.doctree
docs/_build/html/.doctrees/howto/: debug-missing-packages.doctree  index.doctree  init.doctree  inspect-state.doctree  offline-mode.doctree  refresh-schroots.doctree  safe-cleanup.doctree
docs/_build/html/.doctrees/overview/: index.doctree  invariants.doctree
docs/_build/html/appendices/: failure-signatures.html  glossary.html  index.html  preflight-checklist.html
docs/_build/html/explanation/: architecture.html  building-packages.html  dependency-resolution.html  design-tradeoffs.html  index.html  reproducibility.html  testing-philosophy.html  walkthrough.html
docs/_build/html/howto/: debug-missing-packages.html  index.html  init.html  inspect-state.html  offline-mode.html  refresh-schroots.html  safe-cleanup.html
docs/_build/html/overview/: index.html  invariants.html
docs/_build/html/reference/: bind-mounts.html  cli-contract.html  cli.html  index.html  local-repo.html  offline-mode.html  schroot.html
docs/_build/html/tutorial/: first-build.html  first-time-setup.html  index.html  local-repo-setup.html  quickstart.html  schroot-creation.html  validation.html
docs/_static/: canonical-overrides.css
docs/appendices/: glossary.rst  preflight-checklist.rst
docs/explanation/: architecture.rst  building-packages.rst  dependency-resolution.rst  reproducibility.rst  testing-philosophy.rst
docs/howto/: debug-missing-packages.rst  index.rst  init.rst  inspect-state.rst  safe-cleanup.rst
docs/overview/: invariants.rst
docs/reference/: bind-mounts.rst  cli-contract.rst  cli.rst  config.rst  index.rst  local-repo.rst  schroot.rst  target-resolution-quickref.md  target-resolution.md
docs/specs/: upstream-registry-definitions.md
docs/tutorial/: index.rst  quickstart.rst
packastack/: cli.py  config.py  constants.py  logging_setup.py
packastack/cmds/: configure.py  import_tarballs.py
packastack/gbp/: buildpackage.py
packastack/package/: uscan.py
src/packastack/: __init__.py  __main__.py  arch.py  archive.py  cli.py  config.py  debian.py  exceptions.py  gbp.py  gitfetch.py  graph.py  packages.py  paths.py  releases.py  run.py  series.py  spinner.py
src/packastack/apt/: archive.py  localrepo.py  packages.py
src/packastack/commands/: __init__.py  build.py  build_subset.py  clean.py  completion.py  explain.py  init.py  plan.py  refresh.py  search.py
src/packastack/commands/build_helpers/: __init__.py  errors.py  git_helpers.py  phases.py  tarball.py
src/packastack/core/: config.py  context.py  duration.py  paths.py  run.py
src/packastack/data/: upstreams.yaml
src/packastack/debpkg/: changelog.py  control.py  dep_sync.py  gbp.py  gbpconf.py  launchpad_yaml.py  manpages.py  rules.py  version.py  watch.py
src/packastack/planning/: build_all_state.py  build_manifest.py  control_min_versions.py  cycle_suggestions.py  dependency_satisfaction.py  deploop.py  graph.py  graph_builder.py  package_discovery.py  targets.py  type_selection.py  validated_plan.py
src/packastack/reports/: __init__.py  dep_sync.py  deps_satisfaction.py  explain.py  plan_graph.py  type_selection.py  watch_resolution.py
src/packastack/upstream/: gitfetch.py  pkg_scripts.py  registry.py  releases.py  retirement.py  source.py  tarball_cache.py
tests/: conftest.py  test_arch.py  test_archive.py  test_cli.py  test_config.py  test_debian.py  test_duration.py  test_exceptions.py  test_gitfetch.py  test_graph.py  test_logging_setup.py  test_packages.py  test_paths.py  test_plan.py  test_refresh.py  test_releases.py  test_run.py  test_series.py  test_spinner.py
tests/apt/: test_apply_ubuntu_source_fallbacks.py  test_archive.py  test_localrepo.py  test_localrepo_sources.py  test_packages.py
tests/cmds/: test_import_tarballs.py
tests/commands/: test_build.py  test_build_all.py  test_build_ppa.py  test_build_subset.py  test_cli.py  test_completion.py  test_explain.py  test_explain_render.py  test_init.py  test_init_files.py  test_plan.py  test_refresh.py  test_search.py
tests/commands/build_helpers/: __init__.py  test_errors.py  test_git_helpers.py  test_phases.py  test_tarball.py  test_types.py
tests/core/: test_config.py  test_context.py  test_duration.py  test_exceptions.py  test_paths.py  test_run.py  test_spinner.py
tests/debpkg/: test_changelog.py  test_control.py  test_dep_sync.py  test_gbp.py  test_gbpconf.py  test_launchpad_yaml.py  test_manpages.py  test_rules.py  test_rules_extra.py  test_version.py  test_watch.py  test_watch_upgrade.py
tests/gbp/: test_buildpackage.py
tests/integration/: test_cli_logging_end_to_end.py
tests/package/: test_uscan.py
tests/planning/: test_build_all_state.py  test_build_manifest.py  test_control_min_versions.py  test_cycle_suggestions.py  test_dependency_satisfaction.py  test_deploop.py  test_graph.py  test_graph_builder.py  test_graph_builder_index.py  test_package_discovery.py  test_targets.py  test_type_selection.py  test_validated_plan.py  test_version_policy.py  test_wave_computation.py
tests/reports/: __init__.py  test_dep_sync.py  test_deps_satisfaction.py  test_explain_reports.py  test_plan_graph.py  test_type_selection.py  test_watch_resolution.py
tests/upstream/: test_gitfetch.py  test_pkg_scripts.py  test_registry_canonical.py  test_releases.py  test_retirement.py  test_source.py  test_tarball_cache.py
(+34 files in other folders)
