[project]
name = "packastack"
version = "0.1.0"
description = "A tool for building OpenStack packages for Ubuntu"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
authors = [
    { name = "Canonical Ltd." }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.0",
    "python-debian>=0.1.49",
    "packaging>=23.0",
    "launchpadlib>=2.1.0",
]

[project.scripts]
packastack = "packastack.cli:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0",
    "responses>=0.24.0",
]

docs = [
    "sphinx>=7.2.0",
    "furo>=2023.9.10",
    "canonical-sphinx>=0.5.1",
    "sphinx-autodoc-typehints>=1.25.2",
    "sphinx-copybutton>=0.5.2",
    "myst-parser>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/packastack"]

[tool.ruff]
src = ["src", "tests"]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG",    # Unused arguments are common in pytest fixtures
    "SIM117", # Nested with statements are often clearer in tests
]

[tool.ruff.lint.isort]
known-first-party = ["packastack"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
files = ["src/packastack", "tests"]

[[tool.mypy.overrides]]
module = ["git", "git.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["debian", "debian.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--cov=packastack",
    "--cov-report=term-missing",
    "--cov-fail-under=95",
]

[tool.coverage.run]
source = ["src/packastack"]
branch = true
omit = [
    "src/packastack/__main__.py",
    # Integration-heavy paths that rely on system tooling or external services
    "src/packastack/apt/localrepo.py",
    "src/packastack/build/collector.py",
    "src/packastack/build/sbuild.py",
    "src/packastack/build/sbuildrc.py",
    "src/packastack/build/schroot.py",
    "src/packastack/build/mode.py",
    "src/packastack/build/provenance.py",
    "src/packastack/build/tools.py",
    "src/packastack/commands/build.py",
    "src/packastack/commands/clean.py",
    "src/packastack/commands/plan.py",
    "src/packastack/commands/refresh.py",
    "src/packastack/core/run.py",
    "src/packastack/core/config.py",
    "src/packastack/apt/packages.py",
    "src/packastack/debpkg/gbp.py",
    "src/packastack/debpkg/gbpconf.py",
    "src/packastack/debpkg/changelog.py",
    "src/packastack/debpkg/control.py",
    "src/packastack/debpkg/launchpad_yaml.py",
    "src/packastack/debpkg/watch.py",
    "src/packastack/planning/deploop.py",
    "src/packastack/planning/validated_plan.py",
    "src/packastack/upstream/registry.py",
    "src/packastack/upstream/releases.py",
    "src/packastack/upstream/source.py",
    "src/packastack/upstream/tarball_cache.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

[dependency-groups]
docs = [
    "sphinx>=7.2.0",
    "furo>=2023.9.10",
    "canonical-sphinx>=0.5.1",
    "sphinx-autodoc-typehints>=1.25.2",
    "sphinx-copybutton>=0.5.2",
    "myst-parser>=2.0.0",
]
